YUK-12614 Upgrade Apache commons libraries
- Updated commons-lang-2.3.jar to commons-lang-2.6.jar.
- Updated commons-lang3-3.1.jar to commons-lang3-3.3.1.jar.  (No, that is not a typo.)